--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,10 @@
 ---
-import { SITE } from 'astrowind:config';
+import { Image } from 'astro:assets';
+import myImage from "~/assets/images/Trans_logo_white.png";
 ---
 
 <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
 >
-  🚀 {SITE?.name}
+<Image src={myImage} alt="A description of my image." width="200" height="100" />
 </span>
