--- a/src/pages/homes/personal.astro
+++ b/src/pages/homes/personal.astro
@@ -21,12 +21,9 @@ const metadata = {
   <Fragment slot="header">
     <Header
       links={[
-        { text: 'Home', href: '#' },
-        { text: 'About', href: '#about' },
-        { text: 'Resume', href: '#resume' },
-        { text: 'Porfolio', href: '#porfolio' },
-        { text: 'Blog', href: '#blog' },
-        { text: 'Github', href: 'https://github.com/onwidget' },
+        { text: 'Trang chủ', href: '#' },
+        { text: 'Liên hệ', href: '#about' },
+        { text: 'Thư viện', href: '#resume' },
       ]}
       actions={[
         {
