--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -37,7 +37,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
       </div>
     </div>
     Email: khanhtranproduction@gmail.com <br>
-    Hotline: (+84) 817 278 182<br>
+    Hotline: 0965728696 (Minh) - 0837579238 (Khang)<br>
     Địa chỉ: D5/20-21 KDC Long Thịnh, Phú Thứ, Cái Răng, Cần Thơ<br>
    <div class="md:flex md:items-center md:justify-between py-6 md:py-8">
       {
