--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -217,7 +217,7 @@ const metadata = {
 
 
     <Fragment slot="subtitle">
-      Hãy để KhanhTran Production đồng hành cùng quý khách 
+      Hãy để KhanhTran <span class = "text-red-700" >Prod</span>uction đồng hành cùng quý khách 
     </Fragment>
   </CallToAction>
 </Layout>
